corrected image path by removing /

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h2>Background</h2>
       <h5>Oil and Gas Industry, March 7, 2021</h5>
       <div class="container">
-        <img src="/johannes-plenio-2TQwrtZnl08-unsplash (3).jpg">
+        <img src="johannes-plenio-2TQwrtZnl08-unsplash (3).jpg">
         Photo by <a class="caption_pics"
           href="https://unsplash.com/@jplenio?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Johannes
           Plenio</a> on <a class="caption_pics"
@@ -54,7 +54,7 @@
       <h2>Future</h2>
       <h5>Full Stack Developer, March 7, 2021</h5>
       <div class="secondcontainer">
-        <img src="/milad-fakurian-wNsHBf_bTBo-unsplash.jpg" alt="Future">
+        <img src="milad-fakurian-wNsHBf_bTBo-unsplash.jpg" alt="Future">
         Photo by <a class="caption_pics"
           href="https://unsplash.com/@fakurian?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">
           Milad Fakurian</a> on <a class="caption_pics"
@@ -83,14 +83,14 @@
 
   <div id="rightcolumn">
     <h3>Me</h3>
-    <img id="profile_picture" src="/pic.jpg" alt="profile picture">
+    <img id="profile_picture" src="pic.jpg" alt="profile picture">
     <p>I am passionate about becoming a python full stack developer. Would love
       to eventually create games for fun. My passion is to work for a tech
       company where I can collaborate and utilize my skills necessary to meet
       the company's goals.</p>
     <h3>Hobbies</h3>
     <figure>
-      <img src="/nick-fewings-61LcmrqKMEw-unsplash.jpg" alt="watching movies">
+      <img src="nick-fewings-61LcmrqKMEw-unsplash.jpg" alt="watching movies">
       <figcaption>Photo by <a class="caption_pics"
           href="https://unsplash.com/@jannerboy62?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Nick
           Fewings</a> on <a class="caption_pics"
@@ -98,7 +98,7 @@
       </figcaption>
     </figure>
     <figure>
-      <img src="/nicolas-hoizey-poa-Ycw1W8U-unsplash.jpg" alt="jogging">
+      <img src="nicolas-hoizey-poa-Ycw1W8U-unsplash.jpg" alt="jogging">
       <figcaption>Photo by <a class="caption_pics"
           href="https://unsplash.com/@nhoizey?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Nicolas
           Hoizey</a> on <a class="caption_pics"
@@ -106,7 +106,7 @@
       </figcaption>
     </figure>
     <figure>
-      <img src="/johannes-plenio-RWytwNueNng-unsplash.jpg" alt="piano">
+      <img src="johannes-plenio-RWytwNueNng-unsplash.jpg" alt="piano">
       <figcaption>Photo by <a class="caption_pics"
           href="https://unsplash.com/@jplenio?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Johannes
           Plenio</a> on <a class="caption_pics"
